<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:padding="5dp"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        >
		<TextView 
		    android:id="@+id/tv_dialog_title"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:ems="8"
		    style="@style/TextDialogTitle"
		    android:gravity="center_horizontal"
		    android:visibility="gone"
		    />
		<LinearLayout 
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal"
		    android:layout_marginLeft="15dp"
		    android:layout_marginRight="15dp"
		    >
		    <LinearLayout 
			    android:layout_height="wrap_content"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:orientation="vertical"
			    android:gravity="center_horizontal"
			    android:layout_margin="3dp"
			    >
			    <TextView 
		    	    android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/time_hour"
		            style="@style/TextDialogTitle"
		    	    />
		    	<Button 
		    	    android:id="@+id/btn_add_h"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/selector_btn"
		            style="@style/MainBtnTextStyle"
		            android:text="@string/time_add"
		            />

		    	<EditText 
		    	    android:id="@+id/et_h"
		    	    android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="0"
		            style="@style/TextDialogContent"
		            android:background="@android:color/transparent"
		            android:padding="10dp"
		            android:ems="2"
		            android:maxLength="2"
		            android:inputType="number"
		    	    />

		    	<Button 
		    	    android:id="@+id/btn_min_h"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/selector_btn"
		            style="@style/MainBtnTextStyle"
		            android:text="@string/time_minus"
		            />
			</LinearLayout>
		    <LinearLayout 
			    android:layout_height="wrap_content"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:orientation="vertical"
			    android:gravity="center_horizontal"
			    android:layout_margin="3dp"
			    >
			    <TextView 
		    	    android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/time_min"
		            style="@style/TextDialogTitle"
		    	    />
		    	<Button 
		    	    android:id="@+id/btn_add_m"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/selector_btn"
		            style="@style/MainBtnTextStyle"
		            android:text="@string/time_add"
		            />

		    	<EditText 
		    	    android:id="@+id/et_m"
		    	    android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="0"
		            style="@style/TextDialogContent"
		            android:background="@android:color/transparent"
		            android:padding="10dp"
		            android:ems="2"
		            android:inputType="number"
		            android:maxLength="2"
		    	    />

		    	<Button 
		    	    android:id="@+id/btn_min_m"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/selector_btn"
		            style="@style/MainBtnTextStyle"
		            android:text="@string/time_minus"
		            />
			</LinearLayout>
			<LinearLayout 
			    android:layout_height="wrap_content"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:orientation="vertical"
			    android:gravity="center_horizontal"
			    android:layout_margin="3dp"
			    >
			    <TextView 
		    	    android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/time_sec"
		            style="@style/TextDialogTitle"
		    	    />
		    	<Button 
		    	    android:id="@+id/btn_add_s"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/selector_btn"
		            style="@style/MainBtnTextStyle"
		            android:text="@string/time_add"
		            />

		    	<EditText 
		    	    android:id="@+id/et_s"
		    	    android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="0"
		            style="@style/TextDialogContent"
		            android:background="@android:color/transparent"
		            android:padding="10dp"
		            android:ems="2"
		            android:inputType="number"
		            android:maxLength="2"
		    	    />

		    	<Button 
		    	    android:id="@+id/btn_min_s"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/selector_btn"
		            style="@style/MainBtnTextStyle"
		            android:text="@string/time_minus"
		            />
			</LinearLayout>
		</LinearLayout>
        
    </LinearLayout>
    <ImageView 
        android:background="@android:color/white"
        android:layout_height="3dp"
        android:layout_width="fill_parent"
        />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
		<Button 
		    android:id="@+id/btn_cancel"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    style="@style/TextDialogBtn"
		    android:background="@android:color/transparent"
		    android:layout_margin="10dp"
		    android:text="@string/dialog_cancle"
		    />
		<ImageView 
		    android:layout_height="fill_parent"
		    android:layout_width="3dp"
		    android:background="@android:color/white"
		    
		    />
		<Button 
		    android:id="@+id/btn_ok"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    style="@style/TextDialogBtn"
		    android:background="@android:color/transparent"
		    android:layout_margin="10dp"
		    android:text="@string/dialog_ok"
		    />
        
    </LinearLayout>

</LinearLayout>